# checksumdir

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: publish.yml
checksumdir/: __init__.py  __init__.pyi  cli.py  cli.pyi
