[tool]
[tool.poetry]
name = "checksumdir"
version = "1.3.0"
description = "Compute a single hash of the file contents of a directory."
license = "MIT"
keywords = ["hash", "checksum", "md5", "directory"]
classifiers = [
    "Topic :: Utilities", 
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent", 
    "Programming Language :: Python", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
homepage = "http://github.com/cakepietoast/checksumdir"
authors = ["Tom McCarthy <tmac.se@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.0.0"
isort = "^5.13.0"

[tool.poetry.scripts]
checksumdir = 'checksumdir.cli:main'